--- a/app/src/main/res/layout/tab4.xml
+++ b/app/src/main/res/layout/tab4.xml
@@ -11,10 +11,10 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView3"
+        android:layout_marginTop="12dp"
+        android:layout_below="@+id/cardView2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="5dp">
+        android:layout_alignParentStart="true">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -33,14 +33,24 @@
                 >
 
                 <TextView
-                    android:id="@+id/textBox"
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Climate Edge Feedback"
+                    android:layout_margin="10dp"
+                    android:textSize="20sp"/>
+
+                <TextView
+                    android:id="@+id/textBoxScroll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:textAlignment="center"
                     android:layout_below="@+id/cardView3"
-                    android:layout_marginBottom="10dp" />
+                    android:layout_marginBottom="15dp"
+                    android:layout_margin="10dp"
+                    android:text="It is recommended that you apply fertiliser at multiple times to spread the risk of nitrogen loss and crop deficiency due to excessive rainfall.\nOptimal absorption will occur between 20/06 and 04/07."
+                    />
             </LinearLayout>
         </ScrollView>
     </android.support.v7.widget.CardView>
@@ -53,58 +63,154 @@
         android:layout_alignParentStart="true"
         android:id="@+id/cardView2">
 
+
+        <TextView
+            android:id="@+id/textViewX"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#5050ff"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="15dp"/>
+
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/line_chart"
-            android:layout_width="match_parent"
-            android:layout_height="150dp" />
-    </android.support.v7.widget.CardView>
+            android:layout_width="350dp"
+            android:layout_height="300dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="15dp"
+            android:layout_gravity="center"
+            />
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cardView2"
-        android:layout_marginTop="5dp"
-        android:id="@+id/cardView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        <TextView
+            android:id="@+id/textViewY"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center|start"
+            android:gravity="left"
+            android:rotation="-90"
+            android:text="°C"
+            android:textAlignment="center"
+            android:textColor="#5050ff"
+            />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|start"
 
-            <Button
-                android:id="@+id/randButton"
+            android:gravity="bottom"
+            android:orientation="horizontal"
+            android:layout_below="@+id/button"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true">
+
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/textView3"
+                android:layout_toRightOf="@+id/textView3"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="1D" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/textView4"
+                android:layout_toRightOf="@+id/textView4"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="1M" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/cardView3"
-                android:layout_weight="1"
-                android:text="Rand" />
+                android:layout_alignParentBottom="true"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="3M" />
 
-            <Button
-                android:id="@+id/refreshButton"
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Refresh" />
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/textView6"
+                android:layout_toRightOf="@+id/textView6"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="6M" />
 
-            <Button
-                android:id="@+id/resetButton"
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/cardView2"
-                android:layout_weight="1"
-                android:text="Reset" />
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/textView7"
+                android:layout_toRightOf="@+id/textView7"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="1Y" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/textView2"
+                android:layout_toRightOf="@+id/textView2"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="ALL" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
 
         </LinearLayout>
 
+
+
+
+
+
     </android.support.v7.widget.CardView>
-
-
 
 
 </RelativeLayout>
